# cpp-py-kvstore

./: .gitignore  README.md
.github/workflows/: test.yml
client/: example.py  kvstore_client.py  pytest.ini  test_kvstore_client.py
docs/: protocol.md
server/: CMakeLists.txt
server/src/: kvstore.cpp  kvstore.h  main.cpp  server.cpp  server.h  test_kvstore.cpp
